# osint-supplier-search

osint-supplier-search/backend/: .env.example  pyproject.toml  render.yaml  requirements.txt  worker_main.py
osint-supplier-search/backend/adapters/: base.py  registry.py
osint-supplier-search/backend/adapters/tier1/: gleif.py  opencorporates.py
osint-supplier-search/backend/adapters/tier2/: alibaba_suppliers.py  b2brazil.py  cylex.py  dhgate.py  direct_website.py  directindustry.py  ec21.py  europages.py  exporters_india.py  exporters_sg.py  exporthub.py  exportpages.py  gelbeseiten.py  global_sources.py  go4worldbusiness.py  hktdc.py  importyeti.py  indiamart.py  kompass.py  made_in_china.py  manta.py  pagine_gialle.py  thomasnet.py  tradeford.py  tradeindia.py  tradekey.py  tridge.py  volza.py  wlw.py  yell_uk.py  yellow_pages_us.py
osint-supplier-search/backend/adapters/tier3/: companies_house_uk.py  eu_sanctions.py  export_genius.py  import_genius.py  ofac.py  open_sanctions.py  panjiva.py  seair.py  shipmentsfrom.py  trade_atlas.py  un_comtrade.py  wikidata.py  zauba.py
osint-supplier-search/backend/app/: config.py  main.py
osint-supplier-search/backend/app/api/: jobs.py  search.py  suppliers.py
osint-supplier-search/backend/app/core/: security.py
osint-supplier-search/backend/app/db/: rest_client.py  session.py
osint-supplier-search/backend/app/models/: schemas.py
osint-supplier-search/backend/er/: normalizer.py  pipeline.py  ranking.py
osint-supplier-search/backend/workers/: celery_app.py
osint-supplier-search/backend/workers/tasks/: enrichment.py  entity_resolution.py  orchestrator.py  ranking.py
(+18 files in other folders)
